/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package android.os;

option java_multiple_files = true;

message AppBatteryStatsProto {
  message UidStats {
    optional int32 uid = 1;

    message ProcessStateStats {
      enum ProcessState {
        UNSPECIFIED = 0;
        FOREGROUND = 1;
        BACKGROUND = 2;
        FOREGROUND_SERVICE = 3;
        CACHED = 4;
      }

      optional ProcessState process_state = 1;

      // Time spent in this state in the past 24 hours
      optional int64 duration_ms = 2;
      // Estimated power consumed in this state in the past 24 hours
      optional double power_mah = 3;
    }

    repeated ProcessStateStats process_state_stats = 2;
  }

  repeated UidStats uid_stats = 1;
}
